updated functions and font styles

--- a/main.css
+++ b/main.css
@@ -64,8 +64,14 @@ header {
   border: 2px solid whitesmoke;
   min-width: 60px;
   min-height: 60px;
-  font-size: 2rem;
+  font-size: 50px;
   font-weight: bold;
+  color: whitesmoke;
+  text-transform: uppercase;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #keyboard-container {
